--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.capstoneproject.gotogether.LoginActivity">
+    tools:context="com.capstoneproject.gotogether.LoginActivity"
+    android:id="@+id/login_activity">
 
 
     <com.facebook.login.widget.LoginButton
