--- a/app/src/main/res/layout/fragment_add_info.xml
+++ b/app/src/main/res/layout/fragment_add_info.xml
@@ -79,7 +79,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"
+        android:id="@+id/editAddress"
         android:textColor="@color/colorPrimaryDark"
         android:layout_alignTop="@+id/textView4"
         android:layout_alignParentRight="true"
@@ -114,7 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ĐỒNG Ý"
-        android:id="@+id/button"
+        android:id="@+id/btnSave"
         android:layout_marginBottom="39dp"
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@+id/textView2"
@@ -124,8 +124,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BỎ QUA"
-        android:id="@+id/button2"
-        android:layout_alignTop="@+id/button"
+        android:id="@+id/btnIgnore"
+        android:layout_alignTop="@+id/btnSave"
         android:layout_toRightOf="@+id/textView2"
         android:layout_toEndOf="@+id/textView2" />
 
