--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.capstoneproject.gotogether.LoginActivity"
     android:id="@+id/login_activity">
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/home_login"
+        android:scaleType="center"
+        />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
@@ -27,5 +29,12 @@
         android:layout_below="@+id/login_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:src="@drawable/home_login"
+        android:scaleType="centerCrop" />
 
 </RelativeLayout>
