--- a/app/src/main/res/layout/fragment_add_info.xml
+++ b/app/src/main/res/layout/fragment_add_info.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   android:background="@color/com_facebook_button_border_color_focused"
+   android:background="@color/cardview_shadow_start_color"
     tools:context="com.capstoneproject.gotogether.AddInfoFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -10,10 +10,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text="Go Together"
         android:id="@+id/textView2"
         android:textSize="30dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="68dp" />
@@ -24,7 +24,7 @@
         android:text="Tên(*)"
         android:id="@+id/txtName"
         android:textSize="24dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editName"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_alignTop="@+id/txtName"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -47,7 +47,7 @@
         android:text="SĐT(*)"
         android:id="@+id/textView3"
         android:textSize="24dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_below="@+id/txtName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editPhone"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_alignTop="@+id/textView3"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -70,7 +70,7 @@
         android:text="Địa chỉ"
         android:id="@+id/textView4"
         android:textSize="24dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_below="@+id/editPhone"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editAddress"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_alignTop="@+id/textView4"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -93,7 +93,7 @@
         android:text="Email"
         android:id="@+id/textView5"
         android:textSize="24dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_marginTop="41dp"
         android:layout_below="@+id/textView4"
         android:layout_alignParentLeft="true"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editEmail"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_light_background"
         android:layout_alignTop="@+id/textView5"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -117,16 +117,7 @@
         android:id="@+id/btnSave"
 
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/textView2"
-        android:layout_toStartOf="@+id/textView2" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BỎ QUA"
-        android:id="@+id/btnIgnore"
-        android:layout_alignTop="@+id/btnSave"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_toEndOf="@+id/textView2" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="34dp" />
 
 </RelativeLayout>
