--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="BackGroundImageView">
+        <item name="android:alpha">1</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:src">@drawable/home_login</item>
+    </style>
+
 </resources>
