--- a/app/src/main/res/layout/fragment_quick_search.xml
+++ b/app/src/main/res/layout/fragment_quick_search.xml
@@ -1,19 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="com.capstoneproject.gotogether.QuickSearchFragment"
     android:id="@+id/quick_search_fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="297dp"
-        android:text="@string/hello_blank_fragment" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
-        android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_width="fill_parent"
+        android:layout_height="206dp" />
 
 </FrameLayout>
