--- a/app/src/main/res/layout/fragment_add_info.xml
+++ b/app/src/main/res/layout/fragment_add_info.xml
@@ -7,6 +7,14 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:src="@drawable/register"
+        android:scaleType="centerCrop"
+        android:id="@+id/imageView2" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
