--- a/app/src/main/res/layout/fragment_quick_search.xml
+++ b/app/src/main/res/layout/fragment_quick_search.xml
@@ -5,11 +5,10 @@
     tools:context="com.capstoneproject.gotogether.QuickSearchFragment"
     android:id="@+id/quick_search_fragment">
 
-    <!-- TODO: Update blank fragment layout -->
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="fill_parent"
-        android:layout_height="206dp" />
+        android:layout_height="fill_parent" />
 
 </FrameLayout>
