--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/home_login"
+        android:src="@drawable/login2"
         android:scaleType="centerCrop"
         android:id="@+id/imageView2"
         android:layout_alignParentBottom="true"
@@ -24,12 +24,11 @@
         facebook:com_facebook_login_text="ĐĂNG NHẬP BẰNG TÀI KHOẢN FACEBOOK"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
         android:layout_gravity="center_horizontal"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="127dp" />
+        android:layout_marginBottom="215dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,11 +44,10 @@
         android:layout_height="wrap_content"
         android:text="ĐĂNG NHẬP BẰNG SỐ ĐIỆN THOẠI"
         android:id="@+id/phonenumber_login"
+        android:layout_marginTop="40dp"
         android:layout_alignTop="@+id/login_button"
-        android:layout_alignLeft="@+id/login_button"
-        android:layout_alignStart="@+id/login_button"
-        android:layout_marginTop="58dp"
-        android:layout_alignRight="@+id/login_button"
-        android:layout_alignEnd="@+id/login_button" />
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        />
 
 </RelativeLayout>
