--- a/app/src/main/res/layout/fragment_show_info_trip.xml
+++ b/app/src/main/res/layout/fragment_show_info_trip.xml
@@ -5,6 +5,14 @@
     tools:context="com.capstoneproject.gotogether.ShowInfoTripFragment">
 
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:textColor="@color/com_facebook_blue"
+        android:textSize="24dp"
+        android:id="@+id/textView6"
+        android:layout_gravity="center_horizontal|top" />
 
 </FrameLayout>
