--- a/app/src/main/res/drawable-xhdpi/side_nav_bar.xml
+++ b/app/src/main/res/drawable-xhdpi/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#f9ba66"
+        android:endColor="#ff9000"
+        android:startColor="#f4cd9a"
         android:type="linear" />
 </shape>
